--- a/src/main/resources/kbsocp/messages_ru.properties
+++ b/src/main/resources/kbsocp/messages_ru.properties
@@ -2,37 +2,43 @@ localeDisplayName.ru=Russian
 
 databaseUniqueConstraintViolation.IDX_USER__ON_USERNAME=A user with the same username already exists
 
-kbsocp.entity/User=User
-kbsocp.entity/User.active=Active
-kbsocp.entity/User.email=Email
-kbsocp.entity/User.firstName=First name
+kbsocp.entity/User=Пользователь
+kbsocp.entity/User.active=Активен
+kbsocp.entity/User.email=Эл. почта
+kbsocp.entity/User.firstName=Фамилия
 kbsocp.entity/User.id=ID
-kbsocp.entity/User.lastName=Last name
-kbsocp.entity/User.password=Password
-kbsocp.entity/User.timeZoneId=Time zone
-kbsocp.entity/User.username=Username
-kbsocp.entity/User.version=Version
+kbsocp.entity/User.lastName=Имя
+kbsocp.entity/User.password=Пароль
+kbsocp.entity/User.timeZoneId=Времена зона
+kbsocp.entity/User.username=Имя пользователя
+kbsocp.entity/User.version=Версия
 
-kbsocp.screen.login/badCredentials = Unknown login name or bad password
+kbsocp.screen.login/badCredentials = Не верное имя пользователя или пароль
 kbsocp.screen.login/caption = Sample
-kbsocp.screen.login/emptyUsernameOrPassword=Please enter user name and password
+kbsocp.screen.login/emptyUsernameOrPassword=Пожалуйста введите имя пользователя и пароль
 kbsocp.screen.login/loginButton = Submit
 kbsocp.screen.login/loginButton.caption=Войти
-kbsocp.screen.login/loginFailed = Login failed
+kbsocp.screen.login/loginFailed = Не удалось войти
 kbsocp.screen.login/loginScreen.rememberMe=Запомнить меня
 kbsocp.screen.login/passwordPlaceholder = Пароль
 kbsocp.screen.login/usernamePlaceholder = Имя пользователя
 kbsocp.screen.login/welcomeLabel = Добро пожаловать в портал КБС ОЦП
 
-kbsocp.screen.main/application.caption = KbsOcp application
-kbsocp.screen.main/application.logoLabel = KbsOcp application
+kbsocp.screen.main/application.caption = Портал КБС ОЦП
+kbsocp.screen.main/application.logoLabel = Портал КБС ОЦП
 kbsocp.screen.main/sideMenuCollapse = Collapse menu
-kbsocp.screen.main/logoutBtnDescription = Logout
+kbsocp.screen.main/logoutBtnDescription = Выход
 
-kbsocp.screen.user/UserBrowse.caption=Users
-kbsocp.screen.user/UserEdit.caption=User editor
+kbsocp.screen.user/UserBrowse.caption=Пользователи
+kbsocp.screen.user/UserEdit.caption=Редактировать пользователя
 kbsocp.screen.user/additional=Additional
 kbsocp.screen.user/confirmPassword=Confirm password
+kbsocp.screen.user/create.caption=Добавить
+kbsocp.screen.user/edit.caption=Редактировать
+kbsocp.screen.user/filter.caption=Фильтр
 kbsocp.screen.user/passwordsDoNotMatch=Passwords do not match
+kbsocp.screen.user/remove.caption=Удалить
+kbsocp.screen.user/showRoleAssignmentsBtn.caption=Роли
+kbsocp.screen.user/username.caption=Имя пользователя
 
-kbsocp/menu.application=Application
+kbsocp/menu.application=Портал КБС ОЦП
