--- a/src/main/resources/kbsocp/messages_en.properties
+++ b/src/main/resources/kbsocp/messages_en.properties
@@ -33,6 +33,12 @@ kbsocp.screen.user/UserBrowse.caption=Users
 kbsocp.screen.user/UserEdit.caption=User editor
 kbsocp.screen.user/additional=Additional
 kbsocp.screen.user/confirmPassword=Confirm password
+kbsocp.screen.user/create.caption=Create
+kbsocp.screen.user/edit.caption=Edit
+kbsocp.screen.user/filter.caption=Filter
 kbsocp.screen.user/passwordsDoNotMatch=Passwords do not match
+kbsocp.screen.user/remove.caption=Remove
+kbsocp.screen.user/showRoleAssignmentsBtn.caption=Role
+kbsocp.screen.user/username.caption=Username
 
 kbsocp/menu.application=Application
